<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string"
        android:layout_marginTop="40dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stringvalue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Integer"
        android:layout_marginTop="4dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etinteger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="0123456789"
        android:hint="@string/intgerValue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charvalue"
        android:layout_marginTop="4dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etcharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="1"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"

        android:hint="@string/charenter"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longdata"
        android:layout_marginTop="4dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etlong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits=".0123456789"
        android:hint="@string/Longenter"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortdata"
        android:layout_marginTop="4dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etshort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits=".0123456987"
        android:ems="10"
        android:hint="@string/shortValue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booleandata"
        android:layout_marginTop="4dp"
        android:textColor="@color/Green"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/etboolean"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/BooleanValue"/>


<Button
    android:id="@+id/btnsubmit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:gravity="center_vertical"
    android:layout_marginLeft="90dp"/>
</LinearLayout>
</layout>